plugins {
    id 'java'
}

group = 'com.jamma'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:6.0.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        '--add-modules', 'jdk.incubator.vector',
        '--enable-preview'
    ]
}

tasks.withType(Test).configureEach {
    jvmArgs += [
        '--add-modules', 'jdk.incubator.vector',
        '--enable-preview',
        '--enable-native-access=com.jamma.math'
    ]
    useJUnitPlatform()
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
        '--add-modules', 'jdk.incubator.vector',
        '--enable-preview'
    ]
}
